fix:issue of button alignment

--- a/src/pages/home/styles.module.css
+++ b/src/pages/home/styles.module.css
@@ -5,12 +5,12 @@
   overflow-y: scroll;
 }
 
-.app > div {
+/*.app > div {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
+}*/
 
 .row {
   flex-direction: row !important;
@@ -74,8 +74,12 @@ h2 {
 }
 
 .buttons {
-  margin: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  /*margin-right:auto;*/
   display: flex;
+  /*text-align: center;*/
+  justify-content: center;
 }
 
 .buttons button {
@@ -87,7 +91,7 @@ h2 {
   font-size: 18px;
   background-color: #9198e5;
   transition: 200ms;
-  margin: 0 10px;
+  margin: 180px 10px;
   font-weight: bolder;
   width: 160px;
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.1);
